// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of Tooltip location bottom 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="bottom"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat ebDGiQ"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="up"
          location="bottom"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa lbxqmA"
            contentEditable={false}
            direction="up"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="bottom"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa lbxqmA"
                contentEditable={false}
                direction="up"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="bottom"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa lbxqmA Triangle__SVGView-bGJaTC kCZOgc"
                  contentEditable={false}
                  direction="up"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="bottomLeft"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat kOOvmm"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="up"
          location="bottomLeft"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa jDkyxO"
            contentEditable={false}
            direction="up"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="bottomLeft"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa jDkyxO"
                contentEditable={false}
                direction="up"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="bottomLeft"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa jDkyxO Triangle__SVGView-bGJaTC kCZOgc"
                  contentEditable={false}
                  direction="up"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location bottomRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="bottomRight"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="bottomRight"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat fFhRDC"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="up"
          location="bottomRight"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa eTSQhM"
            contentEditable={false}
            direction="up"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="bottomRight"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa eTSQhM"
                contentEditable={false}
                direction="up"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="bottomRight"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa eTSQhM Triangle__SVGView-bGJaTC kCZOgc"
                  contentEditable={false}
                  direction="up"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location middle 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middle"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="middle"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat iOpDTJ"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="left"
          location="middle"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa gDNkfA"
            contentEditable={false}
            direction="left"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="middle"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa gDNkfA"
                contentEditable={false}
                direction="left"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="middle"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa gDNkfA Triangle__SVGView-bGJaTC imjpE"
                  contentEditable={false}
                  direction="left"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="middleLeft"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat kChnPl"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="right"
          location="middleLeft"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa eNHKP"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="middleLeft"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa eNHKP"
                contentEditable={false}
                direction="right"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="middleLeft"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa eNHKP Triangle__SVGView-bGJaTC kxFkbh"
                  contentEditable={false}
                  direction="right"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location middleRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="middleRight"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="middleRight"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat iOpDTJ"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="left"
          location="middleRight"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa gDNkfA"
            contentEditable={false}
            direction="left"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="middleRight"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa gDNkfA"
                contentEditable={false}
                direction="left"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="middleRight"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa gDNkfA Triangle__SVGView-bGJaTC imjpE"
                  contentEditable={false}
                  direction="left"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location none 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="none"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat eOGTUx"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="left"
          location="none"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa kNJpSI"
            contentEditable={false}
            direction="left"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="none"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa kNJpSI"
                contentEditable={false}
                direction="left"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="none"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa kNJpSI Triangle__SVGView-bGJaTC imjpE"
                  contentEditable={false}
                  direction="left"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location top 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="top"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="top"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat eOGTUx"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="down"
          location="top"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa kNJpSI"
            contentEditable={false}
            direction="down"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="top"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa kNJpSI"
                contentEditable={false}
                direction="down"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="top"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa kNJpSI Triangle__SVGView-bGJaTC cPVJEV"
                  contentEditable={false}
                  direction="down"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location topLeft 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topLeft"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="topLeft"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat jfcRTX"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="down"
          location="topLeft"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa llbyMX"
            contentEditable={false}
            direction="down"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="topLeft"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa llbyMX"
                contentEditable={false}
                direction="down"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="topLeft"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa llbyMX Triangle__SVGView-bGJaTC cPVJEV"
                  contentEditable={false}
                  direction="down"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of Tooltip location topRight 1`] = `
<Tooltip
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="topRight"
  noedit={false}
  nohover={false}
  noripple={false}
  parent={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "gray",
      "color": "white",
    }
  }
  testing={true}
  theme={Object {}}
  tooltip=""
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "tooltipBackgroundColor": "gray",
        "tooltipForegroundColor": "white",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-tooltip"
      location="topRight"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
      visible={false}
    >
      <div
        className="ui-tooltip sc-htpNat DygQY"
        style={
          Object {
            "backgroundColor": "gray",
            "color": "white",
          }
        }
      >
        <styled.span
          className="ui-tooltip-content"
          sizing="small"
          style={
            Object {
              "backgroundColor": "gray",
              "color": "white",
            }
          }
        >
          <span
            className="ui-tooltip-content sc-bwzfXH hRAleH"
            style={
              Object {
                "backgroundColor": "gray",
                "color": "white",
              }
            }
          >
            Test Text
          </span>
        </styled.span>
        <Styled(Triangle)
          direction="down"
          location="topRight"
          style={
            Object {
              "fill": "gray",
              "stroke": "gray",
            }
          }
        >
          <Triangle
            className="sc-bdVaJa hiJmsS"
            contentEditable={false}
            direction="down"
            disabled={false}
            focus={false}
            height=""
            id=""
            location="topRight"
            nobase={false}
            noedit={false}
            nohover={false}
            noripple={false}
            selected={false}
            sizing="normal"
            style={
              Object {
                "fill": "gray",
                "stroke": "gray",
              }
            }
            testing={true}
            theme={Object {}}
            tooltip=""
            visible={true}
            width=""
            xcss={null}
          >
            <ThemeProvider
              theme={
                Object {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#004358",
                  "color": "#000000",
                  "headerBackgroundColor": "#004358",
                  "headerForegroundColor": "#ffffff",
                  "headerHoverColor": "#ffe11a",
                  "hoverColor": "#c0c0c0",
                  "inputBorderColor": "#c0c0c0",
                  "tooltipBackgroundColor": "gray",
                  "tooltipForegroundColor": "white",
                  "transitionDelay": "0.5s",
                }
              }
            >
              <Triangle__SVGView
                className="ui-triangle sc-bdVaJa hiJmsS"
                contentEditable={false}
                direction="down"
                disabled={false}
                focus={false}
                height=""
                id=""
                location="topRight"
                nobase={false}
                noedit={false}
                nohover={false}
                noripple={false}
                preserveAspectRatio="xMidYMid meet"
                selected={false}
                sizing="normal"
                style={
                  Object {
                    "fill": "gray",
                    "stokeWidth": "2px",
                    "stroke": "gray",
                  }
                }
                testing={true}
                theme={Object {}}
                tooltip=""
                version="1.1"
                viewBox="0 0 40 40"
                visible={true}
                width=""
                xcss={null}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  className="ui-triangle sc-bdVaJa hiJmsS Triangle__SVGView-bGJaTC cPVJEV"
                  contentEditable={false}
                  direction="down"
                  disabled={false}
                  height=""
                  id=""
                  preserveAspectRatio="xMidYMid meet"
                  selected={false}
                  style={
                    Object {
                      "fill": "gray",
                      "stokeWidth": "2px",
                      "stroke": "gray",
                    }
                  }
                  version="1.1"
                  viewBox="0 0 40 40"
                  width=""
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="0,35, 20,10 40,35"
                  />
                </svg>
              </Triangle__SVGView>
            </ThemeProvider>
          </Triangle>
        </Styled(Triangle)>
      </div>
    </styled.div>
  </ThemeProvider>
</Tooltip>
`;

exports[`Test creation of a Tooltip control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tooltip test-class"
    location="middleRight"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
    visible={false}
  >
    <styled.span
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    >
      <span>
        Test Text
      </span>
    </styled.span>
    <Styled(Triangle)
      direction="left"
      location="middleRight"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test disabling of a Tooltip 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tooltip"
    location="topRight"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
    visible={false}
  >
    <styled.span
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    />
    <Styled(Triangle)
      direction="down"
      location="topRight"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test making a Tooltip invisible 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "tooltipBackgroundColor": "gray",
      "tooltipForegroundColor": "white",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-tooltip"
    location="topRight"
    style={
      Object {
        "backgroundColor": "gray",
        "color": "white",
      }
    }
    visible={false}
  >
    <styled.span
      className="ui-tooltip-content"
      sizing="small"
      style={
        Object {
          "backgroundColor": "gray",
          "color": "white",
        }
      }
    />
    <Styled(Triangle)
      direction="down"
      location="topRight"
      style={
        Object {
          "fill": "gray",
          "stroke": "gray",
        }
      }
    />
  </styled.div>
</ThemeProvider>
`;

exports[`Test retrieval of Tooltip props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "topRight",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "parent": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "gray",
    "color": "white",
  },
  "testing": true,
  "theme": Object {},
  "tooltip": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
